generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "sqlite"
}

enum Sex {
  MALE
  FEMALE
}

enum FitnessGoal {
  GAIN_STRENGTH
  IMPROVE_TECHNIQUE
  GENERAL_FITNESS
  BUILD_MUSCLE
  LOSE_WEIGHT
}

enum ExperienceLevel {
  BEGINNER
  INTERMEDIATE
  ADVANCED
}

enum TrainingStyle {
  WEIGHT_LIFTING
  POWER_LIFTING
  BODY_BUILDING
  BODYWEIGHT_TRAINING
  HOME_WORKOUTS
}

enum TrainingFrequency {
  ONE_TO_TWO_DAYS
  THREE_TO_FOUR_DAYS
  FIVE_PLUS_DAYS
}

enum UnitType {
  METRIC
  IMPERIAL
}

enum ExerciseCategory {
  STRENGTH
  CARDIO
  BODYWEIGHT
  MACHINE
  OTHER
}

enum MuscleGroup {
  CHEST
  BACK
  SHOULDERS
  BICEPS
  TRICEPS
  LEGS
  GLUTES
  CORE
  FULL_BODY
  OTHER
}

enum Equipment {
  BARBELL
  DUMBBELL
  MACHINE
  CABLE
  BODYWEIGHT
  KETTLEBELL
  BAND
  OTHER
}

enum ExerciseType {
  TIMED
  REPS
}

enum BadgeType {
  FIRST_WORKOUT
  WORKOUTS_5
  WORKOUTS_15
  WORKOUTS_20
  WORKOUTS_25
  WORKOUTS_50
  WORKOUTS_75
  WORKOUTS_100
  WORKOUTS_150
  WORKOUTS_200
  WORKOUTS_300
  WORKOUTS_400
  WORKOUTS_500
  WORKOUTS_600
  WORKOUTS_750
  WORKOUTS_1000
  TOTAL_5_HOURS
  TOTAL_10_HOURS
  TOTAL_15_HOURS
  TOTAL_20_HOURS
  TOTAL_25_HOURS
  TOTAL_50_HOURS
  TOTAL_75_HOURS
  TOTAL_100_HOURS
  TOTAL_150_HOURS
  TOTAL_200_HOURS
  TOTAL_300_HOURS
  TOTAL_500_HOURS
  TOTAL_1000_HOURS
  STREAK_2
  STREAK_3
  STREAK_7
  VOLUME_1000
  VOLUME_5000
  VOLUME_10K
  VOLUME_25k
  VOLUME_50k
  VOLUME_75k
  VOLUME_100k
  VOLUME_250k
  VOLUME_500k
  VOLUME_1M
}

model User {
  id                     Int                     @id @default(autoincrement())
  email                  String                  @unique
  password               String
  createdAt              DateTime                @default(now())
  emailVerifiedAt        DateTime?
  username               String                  @unique
  lastUsernameChangeAt   DateTime?
  dob                    DateTime
  sex                    Sex
  height                 Int                     //STORED AS CM
  weight                 Int                     //STORED AS KG
  fitnessGoal            FitnessGoal
  experienceLevel        ExperienceLevel
  trainingStyle          TrainingStyle
  trainingFrequency      TrainingFrequency
  avatarFileName         String?
  heightUnitType         UnitType                @default(METRIC)
  weightUnitType         UnitType                @default(METRIC)
  emailVerificationOtps  EmailVerificationOtp[]
  forgotPasswordOtps     ForgotPasswordOtp[]
  forgotPasswordSessions ForgotPasswordSession[]
  threads                Thread[]
  replies                Reply[]
  threadLikes            ThreadLike[]
  replyLikes             ReplyLike[]
  workoutSessions        WorkoutSession[]
  userBadges             UserBadge[]
}

model EmailVerificationOtp {
  id        Int       @id @default(autoincrement())
  userId    Int       @unique
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  otpHash   String
  expiresAt DateTime
  usedAt    DateTime?
  attempts  Int       @default(0)
  createdAt DateTime  @default(now())

  @@index([userId])
  @@index([expiresAt])
}

model ForgotPasswordOtp {
  id        Int       @id @default(autoincrement())
  userId    Int       @unique
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  otpHash   String
  expiresAt DateTime
  usedAt    DateTime?
  attempts  Int       @default(0)
  createdAt DateTime  @default(now())

  @@index([userId])
  @@index([expiresAt])
}

model ForgotPasswordSession {
  id        Int       @id @default(autoincrement())
  userId    Int       @unique
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  tokenHash String    @unique
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime  @default(now())

  @@index([userId])
  @@index([expiresAt])
}

model Thread {
  id         Int          @id @default(autoincrement())
  title      String
  body       String
  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt
  authorId   Int
  author     User         @relation(fields: [authorId], references: [id], onDelete: Cascade)
  replies    Reply[]
  likes      ThreadLike[]
  replyCount Int          @default(0)
  likeCount  Int          @default(0)

  @@index([authorId])
  @@index([createdAt])
}

model Reply {
  id        Int         @id @default(autoincrement())
  body      String
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt
  authorId  Int
  author    User        @relation(fields: [authorId], references: [id], onDelete: Cascade)
  threadId  Int
  thread    Thread      @relation(fields: [threadId], references: [id], onDelete: Cascade)
  likes     ReplyLike[]
  likeCount Int         @default(0)

  @@index([threadId])
  @@index([authorId])
  @@index([createdAt])
}

model ThreadLike {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())
  threadId  Int
  thread    Thread   @relation(fields: [threadId], references: [id], onDelete: Cascade)
  userId    Int
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([threadId, userId])
  @@index([userId])
}

model ReplyLike {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())
  replyId   Int
  reply     Reply    @relation(fields: [replyId], references: [id], onDelete: Cascade)
  userId    Int
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([replyId, userId])
  @@index([userId])
}

model Exercise {
  id               Int               @id @default(autoincrement())
  name             String            @unique
  category         ExerciseCategory  @default(STRENGTH)
  muscleGroup      MuscleGroup       @default(OTHER)
  equipment        Equipment         @default(OTHER)
  isBodyweight     Boolean           @default(false)
  experienceLevel  ExperienceLevel   @default(BEGINNER)
  createdAt        DateTime          @default(now())
  exerciseType     ExerciseType      @default(REPS)
  workoutExercises WorkoutExercise[]

  @@index([muscleGroup])
  @@index([equipment])
}

model WorkoutSession {
  id               Int                @id @default(autoincrement())
  userId           Int
  user             User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  startedAt        DateTime
  durationSeconds  Int
  endedAt          DateTime
  notes            String?
  exercises        WorkoutExercise[]

  @@index([userId, startedAt])
}

model WorkoutExercise {
  id           Int            @id @default(autoincrement())
  sessionId    Int
  session      WorkoutSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  exerciseId   Int
  exercise     Exercise       @relation(fields: [exerciseId], references: [id], onDelete: Restrict)
  orderIndex   Int            @default(0)
  notes        String?
  sets         WorkoutSet[]

  @@index([sessionId])
  @@index([exerciseId])
}

model WorkoutSet {
  id                Int             @id @default(autoincrement())

  workoutExerciseId Int
  workoutExercise   WorkoutExercise @relation(fields: [workoutExerciseId], references: [id], onDelete: Cascade)

  setNumber         Int
  reps              Int?
  weight            Float?          // STORED AS KG
  durationSeconds   Int?            
  notes             String?
  createdAt         DateTime        @default(now())

  @@unique([workoutExerciseId, setNumber])
  @@index([workoutExerciseId])
}

model Badge {
  id          Int         @id @default(autoincrement())
  type        BadgeType   @unique
  name        String
  icon        String
  createdAt   DateTime    @default(now())

  userBadges  UserBadge[]
}

model UserBadge {
  id        Int           @id @default(autoincrement())
  userId    Int
  badgeId   Int
  earnedAt  DateTime      @default(now())

  user      User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  badge     Badge         @relation(fields: [badgeId], references: [id], onDelete: Cascade)

  @@unique([userId, badgeId])
  @@index([userId, earnedAt])
  @@index([badgeId])
}
